Configuraciones/Azure/Istio/feheroes-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feheroes
  labels:
    app: fe-heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-heroes
  template:
    metadata:
      labels:
        app: fe-heroes
    spec:
      serviceAccountName: feheroes
      containers:
      - name: feheroes
        image: egsmcontenedor.azurecr.io/fehello-jib:0.0.2-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8085
      imagePullSecrets:
      - name: milocalregistry
---
apiVersion: v1
kind: Service
metadata:
  name: feheroes-svc
  annotations:
  labels:
    app: fe-heroes
spec:
  type: ClusterIP
  selector:
    app: fe-heroes
  ports:
  - name: http
    port: 80
    targetPort: http
