Configuraciones/Azure/Istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feheroes-svc
  namespace: heroes-ns
  annotations:
  labels:
    app: fe-heroes
spec:
  type: LoadBalancer
  selector:
    app: fe-heroes
  ports:
  - name: http
    port: 80                
    targetPort: http
