Configuraciones/Azure/Istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: feheroes-svc-vs
spec:
  hosts:
  - "*"
  gateways:
  - feheroes-svc-gw
  http:
  - match:
    - uri:
        exact: /misheroes
    rewrite:
      uri: /heroes
    route:
    - destination:
        host: feheroes-svc
        port:
          number: 80
# http://104.40.176.161/misheroes
# El ingress service de istio es de tipo LoadBalancer, y la IP publica que tiene asignada es 104.40.176.161
